unpackaged/main/default/objects/BOM__c/BOM__c.object-meta.xml
<CustomObject>
    <label>BOM</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>BOM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOMs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>