unpackaged/main/default/objects/BOM__c/fields/Inverter2__c.field-meta.xml
<CustomField>
    <fullName>Inverter2__c</fullName>
    <formula>TEXT (Part_Number2__r.Inverter__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inverter</label>
    <type>Text</type>
</CustomField>