unpackaged/main/default/objects/BOM__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>BOMs</relationshipLabel>
    <relationshipName>BOMs</relationshipName>
    <type>Lookup</type>
</CustomField>