unpackaged/main/default/objects/BOM__c/fields/Panel_Wattage2__c.field-meta.xml
<CustomField>
    <fullName>Panel_Wattage2__c</fullName>
    <formula>Part_Number2__r.Panel_Wattage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Wattage</label>
    <type>Text</type>
</CustomField>