unpackaged/main/default/objects/BOM__c/fields/Panel_Wattage__c.field-meta.xml
<CustomField>
    <fullName>Panel_Wattage__c</fullName>
    <label>Panel Wattage Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>