unpackaged/main/default/objects/BOM__c/fields/Part_Description2__c.field-meta.xml
<CustomField>
    <fullName>Part_Description2__c</fullName>
    <formula>Part_Number2__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Description</label>
    <type>Text</type>
</CustomField>