unpackaged/main/default/objects/BOM__c/fields/Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Description__c</fullName>
    <label>Part Description (Old)</label>
    <type>TextArea</type>
</CustomField>