unpackaged/main/default/objects/BOM__c/fields/Part_Number2__c.field-meta.xml
<CustomField>
    <fullName>Part_Number2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>BOMs</relationshipLabel>
    <relationshipName>BOMs</relationshipName>
    <type>Lookup</type>
</CustomField>