unpackaged/main/default/objects/BOM__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number (Old)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>