unpackaged/main/default/objects/BOM__c/fields/Supply_Chain_Job__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Chain Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>BOMs</relationshipLabel>
    <relationshipName>BOMs</relationshipName>
    <type>Lookup</type>
</CustomField>