unpackaged/main/default/objects/BOM__c/fields/X18_Character_BOM_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Character_BOM_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Character BOM Id</label>
    <type>Text</type>
</CustomField>