unpackaged/main/default/objects/BOM__c/listViews/All_BOMs.listView-meta.xml
<ListView>
    <fullName>All_BOMs</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Panel_Wattage__c</columns>
    <columns>Part_Description__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Quantity__c</columns>
    <columns>Inverter__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All BOMs</label>
</ListView>